@@ -1,3 +1,10 @@
+2024-12-26  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode-unescape-string): Support \x.
+	(ebuild-mode-find-s): Use unibyte buffer for the environment file.
+	* test/ebuild-mode-tests.el (ebuild-mode-test-unescape-string):
+	Update.
+
 2024-12-21  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.77 released.
